chore: Update to Java 9+ and ylem-types