@@ -1,11 +1,9 @@
 package se.l4.graphql.binding.internal.schema;
 
 import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 
 import java.util.List;
-
-import com.google.common.collect.ImmutableList;
 
 import org.junit.Test;
 
@@ -73,7 +71,7 @@ public class InterfaceConversionTest
 		@GraphQLField
 		public List<TestInterface> list()
 		{
-			return ImmutableList.of(new TypeA("v0"), new TypeB("v1"));
+			return List.of(new TypeA("v0"), new TypeB("v1"));
 		}
 	}
 
